# chatsploit-mpc

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml
tools/: __init__.py  console.py  database.py  execute.py  exploits.py  jobs.py  modules.py  sessions.py
utils/: __init__.py  msf_utils.py  validation.py
